<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.xeiam.xchange</groupId>
	<artifactId>xchange-parent</artifactId>
	<version>1.7.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>XChange Parent</name>
	<description>XChange is a Java library providing a simple and consistent API for interacting with a diverse set of financial security exchanges including Bitcoin.</description>

	<url>http://xeiam.com</url>
	<inceptionYear>2012</inceptionYear>

	<organization>
		<name>Xeiam, LLC</name>
		<url>http://xeiam.com</url>
	</organization>

	<developers>
		<developer>
			<name>Tim Molter</name>
		</developer>
		<developer>
			<name>Gary Rowe</name>
			<email>g.rowe@froot.co.uk</email>
		</developer>
		<developer>
			<name>Matija Mazi</name>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>MIT</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
			<comments>All source code is under the MIT license.</comments>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/timmolter/XChange/issues</url>
	</issueManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Nexus Release Repository</name>
			<url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
		<downloadUrl>https://oss.sonatype.org/content/groups/public/com/xeiam/xchange</downloadUrl>
	</distributionManagement>

	<scm>
		<connection>scm:git:git@github.com:timmolter/XChange.git</connection>
		<developerConnection>scm:git:git@github.com:timmolter/XChange.git</developerConnection>
		<url>git@github.com:timmolter/XChange.git</url>
		<tag>HEAD</tag>
	</scm>

	<ciManagement>
		<url>http://ci.xeiam.com/</url>
	</ciManagement>

	<modules>
		<module>xchange-core</module>
		<module>xchange-mtgox</module>
		<module>xchange-examples</module>
		<module>xchange-cavirtex</module>
		<module>xchange-btce</module>
		<module>xchange-openexchangerates</module>
		<module>xchange-bitstamp</module>
		<module>xchange-campbx</module>
		<module>xchange-bitcoincharts</module>
	</modules>

	<repositories>
		<repository>
			<id>sonatype-oss-public</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>

			<!-- Logging is through SLF4J -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.2</version>
			</dependency>

			<!-- SLF4J implementation for use in testing -->
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.0.9</version>
				<!-- Test scope prevents this implementation bleeding out to consuming 
					applications -->
				<scope>test</scope>
			</dependency>

			<!-- All money handling is through Joda Money -->
			<dependency>
				<groupId>org.joda</groupId>
				<artifactId>joda-money</artifactId>
				<!-- Require 0.8+ to support Bitcoin (see #40) -->
				<version>0.8</version>
			</dependency>

			<!-- Charting -->
			<dependency>
				<groupId>com.xeiam.xchart</groupId>
				<artifactId>xchart</artifactId>
				<version>2.2.0</version>
			</dependency>

			<!-- Websocket library -->
			<dependency>
				<groupId>org.java-websocket</groupId>
				<artifactId>Java-WebSocket</artifactId>
				<version>1.3.0</version>
			</dependency>

			<!-- Rest client -->
			<dependency>
				<groupId>com.github.mmazi</groupId>
				<artifactId>rescu</artifactId>
				<version>1.1.0</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<!-- All children will have these dependencies -->
	<dependencies>

		<!-- JUnit for testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

		<!-- FEST for fluent test assertions -->
		<dependency>
			<groupId>org.easytesting</groupId>
			<artifactId>fest-assert-core</artifactId>
			<version>2.0M10</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.4</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<!-- use: mvn clean integration-test -P run-integration-tests -->
		<!-- http://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#groups -->
		<profile>
			<id>run-integration-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.9</version>
						<configuration>
							<excludedGroups>none</excludedGroups>
							<skip>false</skip>
							<!-- <skipTests>false</skipTests> -->
							<useFile>false</useFile>
							<argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=512m</argLine>
							<excludes>
								<exclude>none</exclude>
							</excludes>
							<includes>
								<include>**/*Test*.java</include>
								<include>**/*Test.java</include>
								<!-- <include>**/*TestCase.java</include> -->
							</includes>
						</configuration>
						<executions>
							<execution>
								<id>integration-tests</id>
								<phase>integration-test</phase>
								<goals>
									<goal>test</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<!-- Ensure compilation is done under Java 6 in all environments -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<!-- Generates a source code JAR during package -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Generates a Javadoc JAR during package -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- for deploying to Maven Central -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
			<!-- normally don't run the test classes annotated with @OnlineTest -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>${maven-surefire-plugin.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>${maven-surefire-plugin.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- Versioning -->
		<maven-surefire-plugin.version>2.13</maven-surefire-plugin.version>

	</properties>

</project>
